--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="/assets/logo.svg" alt="Podcast Channel" class="logo-img">
+            <img src="./assets/logo.svg" alt="Podcast Channel" class="logo-img">
         </div>
         <div class="links-menu">
             <input type="checkbox" id="menu" />
@@ -23,22 +23,26 @@
                 <i class="fas fa-times custom-times"></i>
             </label>
             <div class="list-menu">
-                <a href="#" class="link-menu">
-                    Episodios
-                </a>
-                <a href="#" class="link-menu">
-                    Nosotros
-                </a>
-                <a href="#" class="link-menu">
-                        Entrevistas
-                </a>
-                <a href="#" class="link-menu">
-                        Topicos
-                </a>
+                <nav>
+                    <ul>
+                        <li><a href="#podcasts" class="link-menu">
+                            Episodios
+                        </a></li>
+                        <li><a href="#about-us" class="link-menu">
+                            Nosotros
+                        </a></li>
+                        <li><a href="#" class="link-menu"><!-- completar -->
+                                Entrevistas
+                        </a></li>
+                        <li><a href="#" class="link-menu"><!-- completar -->
+                                Topicos
+                        </a></li>
+                    </ul>
+                </nav>    
             </div>
         </div>
     </header>
-    <section class="welcome-section">
+    <section class="welcome-section" id="welcome-section">
         <h1 class="tittle">
             Hello <del>world</del><br>
             pale blue dot.
@@ -50,20 +54,20 @@
             conocé más
         </button>
     </section>
-    <section class="podcasts background-blue">
+    <section class="podcasts background-blue" id="podcasts">
         <h2 class="tittle">Episodios</h2>
         <div class="podcast-list">
             <div class="podcast-container">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" allow="encrypted-media" class="iframe"></iframe>
             </div>
             <div class="podcast-container">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" allow="encrypted-media" class="iframe"></iframe>
             </div>
             <div class="podcast-container">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" allow="encrypted-media" class="iframe"></iframe>
             </div>
             <div class="podcast-container">
-                <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" allow="encrypted-media" class="iframe"></iframe>
             </div>
         </div>
     </section>
