--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="#about-us" class="link-menu">
                             Nosotros
                         </a></li>
-                        <li><a href="#" class="link-menu"><!-- completar -->
+                        <li><a href="#gallery" class="link-menu">
                                 Entrevistas
                         </a></li>
                         <li><a href="#" class="link-menu"><!-- completar -->
@@ -71,7 +71,7 @@
             </div>
         </div>
     </section>
-    <section class="about-us">
+    <section class="about-us" id="about-us">
         <div class="image-container">
             <img src="/assets/phone.png" alt="About us Phone" class="phone-image">
         </div>
@@ -79,6 +79,29 @@
             <h2 class="tittle">De dónde venimos</h2>
                 <p class="description">Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.</p>
                 <p class="description">Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.</p>
+        </div>
+    </section>
+    <section class="gallery" id="gallery">
+        <h2 class="tittle">Invitadas/os estelares</h2>
+        <div class="content-gallery">
+            <div class="individual-gallery">
+                <img src="./assets/grace-hopper.png" alt="grace" class="one-gallery">
+            </div>
+            <div class="individual-gallery">
+                <img src="./assets/Katie-Bouman.png" alt="katie" class="one-gallery">
+            </div>
+            <div class="individual-gallery">
+                <img src="./assets/Margaret_Hamilton.png" alt="margaret" class="one-gallery">
+            </div>
+            <div class="individual-gallery">
+                <img src="./assets/An E.R.A.Univac 1103 computer in the 1950s.png" alt="ERA" class="one-gallery">
+            </div>
+            <div class="individual-gallery">
+                <img src="./assets/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="computer" class="one-gallery">
+            </div>
+            <div class="individual-gallery">
+                <img src="./assets/susan-kare.png" alt="susan" class="one-gallery">
+            </div>
         </div>
     </section>
 </body>
