ultima actualización, terminado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li><a href="#gallery" class="link-menu">
                                 Entrevistas
                         </a></li>
-                        <li><a href="#" class="link-menu"><!-- completar -->
+                        <li><a href="#topics" class="link-menu"><!-- completar -->
                                 Topicos
                         </a></li>
                     </ul>
@@ -94,15 +94,59 @@
                 <img src="./assets/Margaret_Hamilton.png" alt="margaret" class="one-gallery">
             </div>
             <div class="individual-gallery">
-                <img src="./assets/An E.R.A.Univac 1103 computer in the 1950s.png" alt="ERA" class="one-gallery">
+                <img src="./assets/An-E.R.A.Univac-1103-computer-in-the-1950s.png" alt="ERA" class="one-gallery">
             </div>
             <div class="individual-gallery">
-                <img src="./assets/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="computer" class="one-gallery">
+                <img src="./assets/Computer-operators-with-an-Eniac—the-world’s-first-programmable-general-purpose-computer.png" alt="computer" class="one-gallery">
             </div>
             <div class="individual-gallery">
                 <img src="./assets/susan-kare.png" alt="susan" class="one-gallery">
             </div>
         </div>
+    </section>
+    <section class="topics" id="topics">
+        <h2 class="tittle">Algunos de nuestros temas</h2>
+        <div class="topic-list">
+            <div class="container-topics">
+                <img src="./assets/icon1.svg" alt="icon1">
+                <h3>Trabajo remoto</h3>
+            </div>
+            <div class="container-topics">
+                <img src="./assets/icon2.svg" alt="icon2">
+                <h3>Repensando la <br> programación</h3>
+            </div>
+            <div class="container-topics">
+                <img src="./assets/icon3.svg" alt="icon3">
+                <h3>Bases del codigo</h3>
+            </div>
+            <div class="container-topics">
+                <img src="./assets/icon4.svg" alt="icon4">
+                <h3>Seguridad <br> Informatica</h3>
+            </div>
+        </div>
+    </section>
+    <section class="final-background" id="final-background">
+        <div class="tittle">
+            <br>
+            <h2 class="tittle">¿Querés las últimas novedades?</h2>   
+            <button class="btn-primary">
+                ESCUCHÁ LOS EPISODIOS
+            </button> 
+        </div>
+    </section>
+    <section>
+        <footer class="footer" id="footer">
+            <br>
+            <h5 class="tittle">© 2019— Hello blue pale dot </h5>
+            <div class="final-logos"></div>
+            <span class="icon">
+                <a class="icon fa-spotify" href="https://www.spotify.com/co/account/overview/" ></a>
+                <a class="icon fa-instagram" href="https://www.instagram.com/ "></a>
+                <a class="icon fa-twitter" href="https://twitter.com/?lang=es"></a>
+                <a class="icon fa-facebook" href="https://www.facebook.com/"></a>
+                <a class="icon fa-telegram" href="https://web.telegram.org/"></a>
+            </span>
+        </footer>
     </section>
 </body>
 </html>
