--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     <section class="about-us" id="about-us">
         <div class="image-container">
-            <img src="/assets/phone.png" alt="About us Phone" class="phone-image">
+            <img src="./assets/phone.png" alt="About us Phone" class="phone-image">
         </div>
         <div class="content">
             <h2 class="tittle">De dónde venimos</h2>
