--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
             </div>
         </div>
     </section>
-    <section class="final-background" id="final-background">
+    <section class="final-background" id="fnal-background">
         <div class="tittle">
             <br>
-            <h2 class="tittle">¿Querés las últimas novedades?</h2>   
-            <button class="btn-primary">
-                ESCUCHÁ LOS EPISODIOS
-            </button> 
-        </div>
+        <h2 class="tittle">¿Querés las últimas novedades?</h2>   
+        <button class="btn-primary">
+            ESCUCHÁ LOS EPISODIOS
+        </button> 
+        </div>    
     </section>
     <section>
         <footer class="footer" id="footer">
@@ -140,11 +140,11 @@
             <h5 class="tittle">© 2019— Hello blue pale dot </h5>
             <div class="final-logos"></div>
             <span class="icon">
-                <a class="icon fa-spotify" href="https://www.spotify.com/co/account/overview/" ></a>
-                <a class="icon fa-instagram" href="https://www.instagram.com/ "></a>
-                <a class="icon fa-twitter" href="https://twitter.com/?lang=es"></a>
-                <a class="icon fa-facebook" href="https://www.facebook.com/"></a>
-                <a class="icon fa-telegram" href="https://web.telegram.org/"></a>
+                <a class="icon fa-spotify" href="https://www.spotify.com/co/account/overview/" target="_blank"></a>
+                <a class="icon fa-instagram" href="https://www.instagram.com/" target="_blank"></a>
+                <a class="icon fa-twitter" href="https://twitter.com/?lang=es" target="_blank"></a>
+                <a class="icon fa-facebook" href="https://www.facebook.com/" target="_blank"></a>
+                <a class="icon fa-telegram" href="https://web.telegram.org/" target="_blank"></a>
             </span>
         </footer>
     </section>
